minor text change

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,7 +21,7 @@
       </div>
     </span>
 
-      <span href="" class="navLink drop">CSS
+      <span href="" class="navLink drop">Sections
         <div class="dropdownContain">
           <div class="dropOut">
             <div class="triangle"></div>
@@ -29,6 +29,7 @@
               <li><a href="">Grid</a></li>
               <li><a href="">Navbar</a></li>
               <li><a href="">DropDowns</a></li>
+              <li><a href="">Footer</a></li>
             </ul>
           </div>
         </div>
