--- a/scss/base/_base-styles.scss
+++ b/scss/base/_base-styles.scss
@@ -12,7 +12,7 @@ body {
   font-size: 1.5em; // currently ems cause chrome bug misinterpreting rems on body element
   line-height: 1.6;
   font-weight: 400;
-  background: #fafafa;
+  background: #fff;
   font-family: $font-family;
   color: $font-color;
 }
