--- a/_includes/button.html
+++ b/_includes/button.html
@@ -1,4 +1,4 @@
-<article class="row">
+<article class="container">
       <hr id="button">
       <h4>Buttons</h4>
       <p>Buttons come in two basic flavors in Bento. The standard <code>.button</code> element is plain, whereas the <code>.button-primary </code> button is vibrant and has a drop shadow on hover</p>
