--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,5 +1,5 @@
-<hr id="images">
-    <article class="row">
+<article class="container">
+  <hr id="images">
       <h4 id="postImage">Post Images</h4>
       <p>These simple flexbox items will wrap to form grids base of the document size.
         On hover the image lifts off the page to give the user feed back Both the image and user name are links that will take you to different places.</p>
