--- a/_includes/list.html
+++ b/_includes/list.html
@@ -1,8 +1,10 @@
-<hr id="list">
-    <article class="row">
+
+    <article class="container">
+      <hr id="list">
       <h4>List</h4>
       <p>In bento you have three different list options. With the final option <code>.noStyle</code> has no list-style.</p>
-      <div class="three columns">
+      <div class="grid">
+      <div class="three">
         <ol>
           <li>Order List</li>
           <li>item 1</li>
@@ -12,7 +14,7 @@
           <li>item 5</li>
         </ol>
       </div>
-      <div class="three columns">
+      <div class="three">
         <ul>
           <li>Unordered list</li>
           <li>item 1</li>
@@ -22,7 +24,7 @@
           <li>item 5</li>
         </ul>
       </div>
-      <div class="three columns">
+      <div class="three">
         <ul class="noStyle">
           <li>No style</li>
           <li>item 1</li>
@@ -32,4 +34,5 @@
           <li>item 5</li>
         </ul>
       </div>
+    </div>
     </article>
