--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
         <div class="dropOut">
           <div class="triangle"></div>
           <ul>
-            <li><a href="#card">Card</a></li>
+            <li><a href="{{base.url}}/#card">Card</a></li>
             <li><a href="#card">Headlines</a></li>
             <li><a href="#button">Buttons</a></li>
             <li><a href="#input">Inputs</a></li>
@@ -26,10 +26,9 @@
           <div class="dropOut">
             <div class="triangle"></div>
             <ul>
-              <li><a href="">Grid</a></li>
-              <li><a href="">Navbar</a></li>
-              <li><a href="">DropDowns</a></li>
-              <li><a href="">Footer</a></li>
+              <li><a href="{{base.url}}/section.html">Navbar</a></li>
+              <li><a href="{{base.url}}/section.html#section">Container</a></li>
+              <li><a href="{{base.url}}/section.html#grid">Grid</a></li>
             </ul>
           </div>
         </div>
