--- a/_includes/table.html
+++ b/_includes/table.html
@@ -1,5 +1,6 @@
-<hr id="table">
-   <article class="row">
+
+   <article class="container">
+     <hr id="table">
      <h4>Tables</h4>
      <p>Tables need to by properly formated with <code>thead</code> and <code>tbody</code>.</p>
      <table class="u-full-width">
