--- a/_includes/card-headlines.html
+++ b/_includes/card-headlines.html
@@ -1,31 +1,21 @@
 <!--  Card and headline section
 --------------------------------------------------------------->
-<hr id="card">
-    <article class="row">
-      <div class="seven columns">
+    <article class="container">
+      <hr id="card">
+      <div class="grid">
+      <div class="seven">
         <h4>Card</h4>
         <p>The card component is used to get a closer look at a post. Otherwise you the <a href="#postImage">post image</a> component.
           The card component is the only component that shows a post description.</p>
-        <article class="card">
+        <div class="card">
         <img src="http://placehold.it/350x350">
         <section class="caption">
           <h6>user name</h6>
           <p>hipster love their cold brew</p>
         </section>
-        </article>
-        <!-- <pre>
-        <code>
-          <article class="card">
-          <img src="http://placehold.it/350x350">
-          <section class="caption">
-            <h6>user name</h6>
-            <p>hipster love their cold brew</p>
-          </section>
-          </article>
-        </code>
-      </pre> -->
       </div>
-      <div class="three columns">
+      </div>
+      <div class="three">
         <h4>Headline examples</h4>
         <h1>Headline 1</h1>
         <h2>Headline 2</h2>
@@ -34,4 +24,5 @@
         <h5>Headline 5</h5>
         <h6>Headline 6</h6>
     </div>
+  </div>
     </article>
