--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,10 @@
   <title>Document</title>
 <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 </head>
-<body class="container">
+<body class="">
   {% include navbar.html %}
-  {% include card-headlines.html %}
-  {% include button.html %}
-  {% include input.html%}
-  {% include list.html %}
-  {% include table.html %}
-  {% include image.html%}
+{{ content }}
 
+  {% include footer.html%}
 </body>
 </html>
